[package]
name = "substrate-benchmark-machine"
version = "0.0.3"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "CLI for benchmarking substrate validator node"
readme = "README.md"

[lib]
path = "lib.rs"

[[bin]]
name = "substrate-benchmark-machine"
path = "main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
comfy-table = { version = "6.0.0", default-features = false }
lazy_static = "1.4.0"
lg = "0.1.2"
log = "0.4.17"
rand = { version = "0.8.4", features = ["small_rng"] }
sc-service = { version = "0", default-features = false }
sc-cli = { version = "0", default-features = false }
sc-sysinfo = { version = "19" }
serde = "1.0.136"
serde_json = "1.0.85"
thiserror = "1.0.30"
anyhow = "1.0.70"

