[package]
name = "substrate-benchmark-machine"
version = "0.1.4"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "CLI for benchmarking substrate validator node"
readme = "README.md"

[lib]
path = "lib.rs"

[[bin]]
name = "substrate-benchmark-machine"
path = "main.rs"

[profile.release]
strip = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = { version = "6", default-features = false }
lazy_static = "1"
lg = "0"
log = "0"
rand = { version = "0", features = ["small_rng"] }
sc-service = { version = "0", default-features = false }
sc-cli = { version = "0", default-features = false }
sc-sysinfo = { version = "45" }
serde = "1"
serde_json = "1"
thiserror = "1"
anyhow = "1"
